--- a/src/app/componentes/saludar.component.html
+++ b/src/app/componentes/saludar.component.html
@@ -2,4 +2,8 @@
 <br>
 <small>saludar.component.html</small>
 <input type="text" name="" id="">
-<p>Soy un Parrafo</p>
+<p>Soy un Parrafo </p>
+
+<p>
+    Hola {{nombre}}
+</p>
