--- a/src/app/componentes/saludar.component.html
+++ b/src/app/componentes/saludar.component.html
@@ -1,15 +1,20 @@
-<h1>Mi Componente desde el Archivo</h1>
-<br>
-<small>saludar.component.html</small>
-<input type="text" name="" id="">
-<p>Soy un Parrafo </p>
+<h1>Saludar Component</h1>
 
-<div>
+<div [ngSwitch]="nombres.length">
+    <div>
     <input type="text" [(ngModel)]="nombreLista">
     <br>
     <button (click)="onButtonClick()">Añadir nombre</button>
+    </div>  
+<div *ngSwitchCase="1">
+    <p>Uno</p>
+</div>
+<div *ngSwitchCase="3">
+    <p>Tres</p>
+</div>
 </div>
 
-<p (click)="onClick()">
-    Hola {{nombre}}
+
+<p *ngFor="let item of nombres; index as i">
+    {{i}}.- Hola {{item}}
 </p>
