Validacion de formulario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<saludar-app #micomSaludar [nombre]="name" (saludar)="onSaludar($event)"></saludar-app>  
+<!--<saludar-app #micomSaludar [nombre]="name" (saludar)="onSaludar($event)"></saludar-app>-->
+<app-form></app-form>
