--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <!--<saludar-app #micomSaludar [nombre]="name" (saludar)="onSaludar($event)"></saludar-app>-->
 <app-form></app-form>
+<br>
+<div class="container">
+<button type="submit" class="btn btn-primary" (click)="mostrar()">{{buttonName}}</button>
+<div *ngIf="show">
+<app-add-app></app-add-app>
+</div>
+</div>
