--- a/src/app/componentes/add-app/add-app.component.html
+++ b/src/app/componentes/add-app/add-app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h1>Alta de Registros</h1>
     <form [formGroup]="addFormulario" (ngSubmit)="add(addFormulario.value)">
         <div class="form-row">
             <div class="col-md-6 mb-3">
