--- a/src/app/componentes/form/form.component.html
+++ b/src/app/componentes/form/form.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h1>Validar Formulario</h1>
     <form [formGroup]="logFrml" (ngSubmit)="enviar(logFrml.value)">
         <div class="form-row" class="padre">
             <div class="form-group col-md-6">
