--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
-<!--<saludar-app #micomSaludar [nombre]="name" (saludar)="onSaludar($event)"></saludar-app>-->
+<!--
+<saludar-app #micomSaludar [nombre]="name" (saludar)="onSaludar($event)"></saludar-app>
+<br>
+<p>
+    <span [ngClass]="validando(micomSaludar.nombreLista)">{{micomSaludar.nombreLista}}  </span>
+    
+</p>
+-->
 <app-form></app-form>
 <br>
+<!--
 <div class="container">
 <button type="submit" class="btn btn-primary" (click)="mostrar()">{{buttonName}}</button>
 <div *ngIf="show">
 <app-add-app></app-add-app>
 </div>
 </div>
+-->
