--- a/src/app/componentes/saludar.component.css
+++ b/src/app/componentes/saludar.component.css
@@ -1,3 +1,12 @@
 p{
     font-size: 1.5em
 }
+.center{
+    display: flex;
+    justify-content: center;
+}
+
+.col {
+    margin: 0 auto;
+    text-align: center;
+  }
